# code_optimizer

./: CMakeLists.txt  index.html  package-lock.json  package.json  server.js
src/: App.jsx
src/backend/include/: ast.hpp  optimizer.hpp  parser.hpp
src/backend/src/: main.cpp  optimizer.cpp  parser.cpp
